[tool.poetry]
name = "honeybadger"
version = "0.1.0"
description = ""
authors = ["Lukas Bures <burylukas@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
